k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: tjddms/spicy-frontend:91
          imagePullPolicy: IfNotPresent
#          securityContext:
#            runAsNonRoot: true
#            runAsUser: 1000
#            allowPrivilegeEscalation: false
#            capabilities:
#              drop:
#                - ALL
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
  type: ClusterIP
